Completed SetColumns sample

--- a/CSharp_SetColumns/CSharp_SetColumns.csproj
+++ b/CSharp_SetColumns/CSharp_SetColumns.csproj
@@ -58,6 +58,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Functions.cs" />
     <Compile Include="XamlBindingPathVisitor.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
