--- a/VisualBasic/VisualBasic.vbproj
+++ b/VisualBasic/VisualBasic.vbproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Utils\Utils.csproj" />
+    <ProjectReference Include="..\Shared\_Shared.csproj" />
   </ItemGroup>
 
 </Project>
