--- a/CSharp/CSharp.csproj
+++ b/CSharp/CSharp.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Utils\Utils.csproj" />
+    <ProjectReference Include="..\Shared\_Shared.csproj" />
   </ItemGroup>
 
 </Project>
