--- a/Shared/_Shared.csproj
+++ b/Shared/_Shared.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OneOf" Version="2.1.150" />
+  </ItemGroup>
+
 </Project>
