--- a/VisualBasic_LikeVisitor/packages.config
+++ b/VisualBasic_LikeVisitor/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="OneOf" version="2.1.150" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.111.0" targetFramework="net472" />
 </packages>
